--- a/cv.tex
+++ b/cv.tex
@@ -125,7 +125,16 @@
 %-----------EXPERIENCE-----------
 \section{Experience}
   \resumeSubHeadingListStart
-
+    \resumeSubheading
+      {Head of development/Product Owner}{May 2021 -- Present}
+      {Neos}{Saint-Petersburg, Russia}
+      \resumeItemListStart
+        \resumeItem{Improving company development flow for 4 scrum teams}
+        \resumeItem{Mentoring PO and lead series of meet-up for leads}
+        \resumeItem{Synchronisation of development capabilities with business commitments}
+        \resumeItem{Improving scrum practices in the company}
+      \resumeItemListEnd
+      
     \resumeSubheading
       {Product Owner}{February 2020 -- Present}
       {Deutsche Telekom IT RUS (former T-Systems RUS)}{Saint Petersburg, Russia}
@@ -147,19 +156,12 @@
     \resumeItemListEnd
 
     \resumeSubheading
-      {Senior Java developer}{December 2018 -- February 2019}
+      {Junior to Senior Java developer}{February 2016 -- February 2019}
       {T-Systems RUS}{Saint Petersburg, Russia}
       \resumeItemListStart
       \resumeItem{Develop and support of legacy full-stack application written on JavaEE with Struts as the frontend and Oracle-DB}
       \resumeItem{Develop and support of legacy Windows thick-client written on JavaScript and C\#}
     \resumeItemListEnd
-
-    \resumeSubheading
-      {Java developer}{October 2017 -- November 2018}
-      {T-Systems RUS}{Saint Petersburg, Russia}
-    \resumeSubheading
-      {Junior Java developer}{February 2016 -- September 2017}
-      {T-Systems RUS}{Saint Petersburg, Russia}
 
   \resumeSubHeadingListEnd
 
