update cv June 2022

--- a/cv.tex
+++ b/cv.tex
@@ -103,7 +103,7 @@
     \textbf{\Huge \scshape Semen Tenishchev} \\ \vspace{1pt}
     \small +7 962 705 41 49 $|$ \href{mailto:tenischev.semen@gmail.com}{\underline{tenischev.semen@gmail.com}} $|$
     \href{https://github.com/Tenischev}{\underline{github.com/Tenischev}} $|$
-    \href{https://profile.codersrank.io/user/Tenischev}{\underline{codersrank.io/Tenischev}}
+    \href{https://t.me/kris13}{\underline{@kris13}}
 \end{center}
 
 
@@ -126,17 +126,27 @@
 \section{Experience}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Head of development/Product Owner}{May 2021 -- Present}
+      {Chief Technology Officer (CTO)}{April 2022 -- Present}
+      {Neos}{Saint-Petersburg, Russia}
+      \resumeItemListStart
+        \resumeItem{Clarification of technical details, checking the capabilities of products at the pre-sale stage}
+        \resumeItem{Project and product risk management in technical aspects}
+        \resumeItem{Global vision for products technology development}
+        \resumeItem{Improving the interaction between development teams and technical support, project managers and product owners}
+      \resumeItemListEnd
+
+    \resumeSubheading
+      {Head of development/Product Owner}{May 2021 -- March 2022}
       {Neos}{Saint-Petersburg, Russia}
       \resumeItemListStart
         \resumeItem{Improving company development flow for 4 scrum teams}
-        \resumeItem{Mentoring PO and lead series of meet-up for leads}
+        \resumeItem{Mentoring PO and conduct series of meet-ups for leads}
         \resumeItem{Synchronisation of development capabilities with business commitments}
         \resumeItem{Improving scrum practices in the company}
       \resumeItemListEnd
-      
+
     \resumeSubheading
-      {Product Owner}{February 2020 -- Present}
+      {Product Owner}{February 2020 -- May 2021}
       {Deutsche Telekom IT RUS (former T-Systems RUS)}{Saint Petersburg, Russia}
       \resumeItemListStart
         \resumeItem{Agile team of 7 people, company leads by SAFe framework}
@@ -165,6 +175,35 @@
 
   \resumeSubHeadingListEnd
 
+%-----------PROGRAMMING SKILLS-----------
+\section{Technical Skills}
+ \begin{itemize}[leftmargin=0.15in, label={}]
+    \small{\item{
+     \textbf{Languages}{: Java, SQL (PL/SQL, Postgres), JavaScript, HTML/CSS, C++, C} \\
+     \textbf{Frameworks}{: Spring Boot, Apache Camel, Flyway, Liquibase, JUnit, Testcontainers, OpenAPI, ReactJS} \\
+     \textbf{Tools}{: Jira, YouTrack, GitLab, TeamCity, Jenkins, IntelliJ, Docker, Rancher, Kafka, IMB MQ}
+    }}
+ \end{itemize}
+
+%-----------PROGRAMMING SKILLS-----------
+\section{Soft Skills}
+ \begin{itemize}[leftmargin=0.15in, label={}]
+    \small{\item{
+     \textbf{Methodologies}{: Agile, Scrum, SAFe, Waterfall} \\
+     \textbf{Characterization}{: INTP(-A), critical thinking, passion for improvement} \\
+     \textbf{HR}{: hiring, mentoring, leadership, firing}
+    }}
+ \end{itemize}
+
+%-----------ACHIEVEMENTS-----------
+\section{Achievements and certificates}
+ \begin{itemize}[leftmargin=0.15in, label={}]
+    \small{\item{
+     \textbf{Member of AsyncAPI Technical Steering Committee}{} \\
+     \textbf{Certified SAFe PO}{}
+ \end{itemize}
+
+
 
 %-----------PROJECTS-----------
 \section{Free time projects}
@@ -183,20 +222,5 @@
             \resumeItem{All services has a build pipeline to create Docker images}
           \resumeItemListEnd
     \resumeSubHeadingListEnd
-
-
-
-%
-%-----------PROGRAMMING SKILLS-----------
-\section{Technical Skills}
- \begin{itemize}[leftmargin=0.15in, label={}]
-    \small{\item{
-     \textbf{Languages}{: Java SE and EE, SQL (PL/SQL, Postgres), JavaScript, HTML/CSS, C++, C} \\
-     \textbf{Frameworks}{: Spring Boot, Apache Camel, Flyway, JUnit, OpenAPI, React} \\
-     \textbf{Tools}{: Jira, GitLab, IntelliJ, Docker, Rancher, Kafka, IMB MQ}
-    }}
- \end{itemize}
-
-
 %-------------------------------------------
 \end{document}
