--- a/cv.tex
+++ b/cv.tex
@@ -112,7 +112,7 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {ITMO University}{Saint Petersburg, Russia}
-      {Phd of Mathematical modeling, numerical methods and program complexes}{2018 -- Present}
+      {Phd of Mathematical modeling, numerical methods and program complexes (not finished)}{2018 -- 2022}
     \resumeSubheading
       {ITMO University}{Saint Petersburg, Russia}
       {Master of Applied Mathematics and Computer Science}{2016 -- 2018}
@@ -131,7 +131,7 @@
       \resumeItemListStart
         \resumeItem{Clarification of technical details, checking the capabilities of products at the pre-sale stage}
         \resumeItem{Project and product risk management in technical aspects}
-        \resumeItem{Global vision for products technology development}
+        \resumeItem{Global vision for products technology development, improvement of the development process, upgrading tools up-to-date}
         \resumeItem{Improving the interaction between development teams and technical support, project managers and product owners}
       \resumeItemListEnd
 
@@ -140,7 +140,7 @@
       {Neos}{Saint-Petersburg, Russia}
       \resumeItemListStart
         \resumeItem{Improving company development flow for 4 scrum teams}
-        \resumeItem{Mentoring PO and conduct series of meet-ups for leads}
+        \resumeItem{Mentoring PO and conduct series of meet-ups for leads and developers}
         \resumeItem{Synchronisation of development capabilities with business commitments}
         \resumeItem{Improving scrum practices in the company}
       \resumeItemListEnd
