--- a/cv.tex
+++ b/cv.tex
@@ -130,8 +130,9 @@
       {Neos}{Saint-Petersburg, Russia}
       \resumeItemListStart
         \resumeItem{Clarification of technical details, checking the capabilities of products at the pre-sale stage}
-        \resumeItem{Project and product risk management in technical aspects}
+        \resumeItem{Projects and products risk management in technical aspects}
         \resumeItem{Global vision for products technology development, improvement of the development process, upgrading tools up-to-date}
+        \resumeItem{Development lead on Java team, continuing to act as PO for the product}
         \resumeItem{Improving the interaction between development teams and technical support, project managers and product owners}
       \resumeItemListEnd
 
