set end of work in Neos

--- a/cv.tex
+++ b/cv.tex
@@ -126,12 +126,12 @@
 \section{Experience}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Chief Technology Officer (CTO)}{April 2022 -- Present}
+      {Chief Technology Officer (CTO)}{April 2022 -- April 2023}
       {Neos}{Saint-Petersburg, Russia}
       \resumeItemListStart
+        \resumeItem{Global vision for products technology development, improvement of the development process, upgrading tools up-to-date}
         \resumeItem{Clarification of technical details, checking the capabilities of products at the pre-sale stage}
         \resumeItem{Projects and products risk management in technical aspects}
-        \resumeItem{Global vision for products technology development, improvement of the development process, upgrading tools up-to-date}
         \resumeItem{Development lead on Java team, continuing to act as PO for the product}
         \resumeItem{Improving the interaction between development teams and technical support, project managers and product owners}
       \resumeItemListEnd
@@ -140,10 +140,10 @@
       {Head of development/Product Owner}{May 2021 -- March 2022}
       {Neos}{Saint-Petersburg, Russia}
       \resumeItemListStart
-        \resumeItem{Improving company development flow for 4 scrum teams}
+        \resumeItem{Improving company development flow by introducing Agile practices and building 4 scrum teams}
+        \resumeItem{Improving development CI\CD flow and artifacts (docs, architecture guidelines, knowledge base, tasks)}
         \resumeItem{Mentoring PO and conduct series of meet-ups for leads and developers}
         \resumeItem{Synchronisation of development capabilities with business commitments}
-        \resumeItem{Improving scrum practices in the company}
       \resumeItemListEnd
 
     \resumeSubheading
