--- a/cv.tex
+++ b/cv.tex
@@ -141,7 +141,7 @@
       {Neos}{Saint-Petersburg, Russia}
       \resumeItemListStart
         \resumeItem{Improving company development flow by introducing Agile practices and building 4 scrum teams}
-        \resumeItem{Improving development CI\CD flow and artifacts - docs, architecture guidelines, knowledge base, tasks}
+        \resumeItem{Improving development CI/CD flow and artifacts - docs, architecture guidelines, knowledge base, tasks}
         \resumeItem{Mentoring PO and conduct series of meet-ups for leads and developers}
         \resumeItem{Synchronisation of development capabilities with business commitments}
       \resumeItemListEnd
