update contact info

--- a/cv.tex
+++ b/cv.tex
@@ -101,7 +101,7 @@
 
 \begin{center}
     \textbf{\Huge \scshape Semen Tenishchev} \\ \vspace{1pt}
-    \small +7 962 705 41 49 $|$ \href{mailto:tenischev.semen@gmail.com}{\underline{tenischev.semen@gmail.com}} $|$
+    \small +357 95924835 $|$ \href{mailto:tenischev.semen@gmail.com}{\underline{tenischev.semen@gmail.com}} $|$
     \href{https://github.com/Tenischev}{\underline{github.com/Tenischev}} $|$
     \href{https://t.me/kris13}{\underline{@kris13}}
 \end{center}
