--- a/cv.tex
+++ b/cv.tex
@@ -180,9 +180,9 @@
 \section{Technical Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     \textbf{Languages}{: Java, SQL (PL/SQL, Postgres), JavaScript, HTML/CSS, C++, C} \\
-     \textbf{Frameworks}{: Spring Boot, Apache Camel, Flyway, Liquibase, JUnit, Testcontainers, OpenAPI, ReactJS} \\
-     \textbf{Tools}{: Jira, YouTrack, GitLab, TeamCity, Jenkins, IntelliJ, Docker, Rancher, Kafka, IMB MQ}
+     \textbf{Languages}{: Java, SQL (PL/SQL, Postgres), Kotlin, JavaScript, HTML/CSS, C++, C} \\
+     \textbf{Frameworks}{: Spring Boot, Spring Framework, Apache Camel, Apache Kafka, Gradle, Flyway, Liquibase, JUnit, Testcontainers, Docker, Rancher, OpenAPI} \\
+     \textbf{Tools}{: PostgreSQL, GitLab CI, TeamCity, Jenkins, ElasticSearch, Prometheus, Grafana, Apache NiFi, Jira, YouTrack}
     }}
  \end{itemize}
 
