--- a/cv.tex
+++ b/cv.tex
@@ -126,6 +126,15 @@
 \section{Experience}
   \resumeSubHeadingListStart
     \resumeSubheading
+      {Senior Software Engineer}{September 2023 -- now}
+      {FinDev}{Limassol, Cyprus}
+      \resumeItemListStart
+        \resumeItem{Design, develop and lead delivery}
+        \resumeItem{Task definition and planning}
+        \resumeItem{Providing accountability for CI/CD solutions}
+      \resumeItemListEnd
+
+    \resumeSubheading
       {Chief Technology Officer (CTO)}{April 2022 -- April 2023}
       {Neos}{Saint-Petersburg, Russia}
       \resumeItemListStart
