--- a/cv.tex
+++ b/cv.tex
@@ -129,9 +129,10 @@
       {Senior Software Engineer}{September 2023 -- now}
       {FinDev}{Limassol, Cyprus}
       \resumeItemListStart
-        \resumeItem{Design, develop and lead delivery}
-        \resumeItem{Task definition and planning}
-        \resumeItem{Providing accountability for CI/CD solutions}
+        \resumeItem{Lead the design and development of software solutions, working closely with stakeholders to translate business needs into technical specifications}
+        \resumeItem{Drive iterative development cycles, incorporating user feedback to continuously improve solution quality and usability}
+        \resumeItem{Collaborate effectively with other teams to align solutions, define APIs, and leverage existing system knowledge}
+        \resumeItem{Identify and implement improvements to core libraries and infrastructure to enhance development efficiency}
       \resumeItemListEnd
 
     \resumeSubheading
