--- a/cv.tex
+++ b/cv.tex
@@ -190,8 +190,8 @@
 \section{Technical Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     \textbf{Languages}{: Java, SQL (PL/SQL, Postgres), Kotlin, JavaScript, HTML/CSS, C++, C} \\
-     \textbf{Frameworks}{: Spring Boot, Spring Framework, Apache Camel, Apache Kafka, Gradle, Flyway, Liquibase, JUnit, Testcontainers, Docker, Rancher, OpenAPI} \\
+     \textbf{Languages}{: Java, SQL (PL/SQL, Postgres), Kotlin, TypeScript, JavaScript, HTML/CSS, C++, C} \\
+     \textbf{Frameworks}{: Spring Boot, Spring Framework, Apache Camel, Apache Kafka, React, Gradle, Maven, Flyway, Liquibase, JUnit, Testcontainers, Docker, Rancher, OpenAPI} \\
      \textbf{Tools}{: PostgreSQL, GitLab CI, TeamCity, Jenkins, ElasticSearch, Prometheus, Grafana, Apache NiFi, Jira, YouTrack}
     }}
  \end{itemize}
@@ -226,12 +226,6 @@
             \resumeItem{Developed a module for a AsyncAPI code generator to create Spring Boot based code template like it does in OpenAPI}
             \resumeItem{Several async protocols were supported: kafka, mqtt, amqp}
             \resumeItem{Also several adjustments in central generator code}
-          \resumeItemListEnd
-      \resumeProjectHeading
-          {\textbf{Traffic light} $|$ \emph{Java, Gradle, Docker}}{July 2019 -- August 2019}
-          \resumeItemListStart
-            \resumeItem{Developed a three microservices, first with DB and CRUD REST API to store "news", second is frontend app to display the "news" and status of build from Jenkins as a Traffic light, third is frontend app to create "news"}
-            \resumeItem{All services has a build pipeline to create Docker images}
           \resumeItemListEnd
     \resumeSubHeadingListEnd
 %-------------------------------------------
